--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,31 +12,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Check out the repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
 
+      # Step 3: Install build and twine
       - name: Install build and Twine
         run: |
           python -m pip install --upgrade pip
           python -m pip install build twine
 
+      # Step 4: Build the package
       - name: Build Arby Audio 3D
         run: python -m build
 
-      - name: Upload build artifacts (optional)
+      # Step 5: Upload build artifacts (optional)
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: arby-audio3d-dists
           path: dist/
 
+      # Step 6: Publish to PyPI
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
         env:
+          TWINE_USERNAME: __token__      # Required for API token auth
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
