--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,18 +1,19 @@
 name: Publish Arby Audio 3D to PyPI
 
+# Trigger this workflow when a GitHub Release is published
 on:
   release:
     types: [published]
 
 permissions:
-  contents: read
+  contents: read  # Needed to checkout code
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -22,7 +23,7 @@ jobs:
         with:
           python-version: "3.x"
 
-      # Step 3: Install build and twine
+      # Step 3: Install build and Twine
       - name: Install build and Twine
         run: |
           python -m pip install --upgrade pip
@@ -45,5 +46,5 @@ jobs:
         with:
           packages-dir: dist/
         env:
-          TWINE_USERNAME: __token__      # Required for API token auth
+          TWINE_USERNAME: __token__                  # Required for API token auth
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
